--- a/themes/hsk_zymphonies/sass/_layout.sass
+++ b/themes/hsk_zymphonies/sass/_layout.sass
@@ -46,6 +46,7 @@
         color: $light-grey-text
         padding: 7px 0 7px 4px
         display: block
+        hyphens: auto
         &:hover
           text-decoration: none
           color: $link-color
