--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -339,7 +339,7 @@
             padding-right: 3px
     // Special styling for the Schnellschach and Blitz Turnier
     // page, since the tables are too wide
-    &.node-schnellschach, &.node-monatsblitz, &.node-vereinspokal
+    &.node-schnellschach, &.node-monatsblitz, &.node-vereinspokal, &.node-seniorenschnellschach
       .col-md-9
         float: none
         width: 100%
