Styling Bild-Untertitel

--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -299,6 +299,13 @@
         background: $grey-background
         content: "\f017"
 
+figure
+  figcaption
+    +small-grey-links
+    line-height: 1.3
+    margin-top: 0.5em
+    margin-bottom: 1em
+
 
 
 
