--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2477,6 +2477,14 @@ form#webform-submission-anmeldung-als-vereinsmitglied-form input {
     background: #888;
     content: ""; }
 
+figure figcaption {
+  font-size: 12.4px;
+  font-size: 0.8rem;
+  color: #888;
+  line-height: 1.3;
+  margin-top: 0.5em;
+  margin-bottom: 1em; }
+
 /* End Media Query Tablet */
 /*------------------------------------------- */
 /*------------------------------------------- */
