--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -31,6 +31,8 @@
     a
       +x-rem(font-size, 0.8)
       color: $light-grey-text
+  h2, h3
+    clear: both
 
   .embedded-entity
     margin-top: 12px
