--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -171,6 +171,8 @@
 
 .page-node-type-team
   .group-team-results
+    .details-wrapper
+      overflow-x: auto
     .horizontal-tabs
       +tab-group-container
     .horizontal-tabs-panes
