Klassen an Bildern erlauben, Klassen für Floaten von Bildern mit viel Abstand

--- a/themes/hsk_zymphonies/sass/_base.sass
+++ b/themes/hsk_zymphonies/sass/_base.sass
@@ -72,6 +72,21 @@ button, a
     &:hover
       color: white
 
+.align-right
+  margin: 5px 0 5px 15px
+
+.align-left
+  margin: 5px 15px 5px 0
+
+.floatright-far
+  float: right
+  margin: 5px 0 5px 30px
+
+.floatleft-far
+  float: left
+  margin: 5px 30px 5px 0
+
+
 
 
 /*------------------------------------------- */
