--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1482,6 +1482,20 @@ button.btn, a.btn {
   button.btn:hover, a.btn:hover {
     color: white; }
 
+.align-right {
+  margin: 5px 0 5px 15px; }
+
+.align-left {
+  margin: 5px 15px 5px 0; }
+
+.floatright-far {
+  float: right;
+  margin: 5px 0 5px 30px; }
+
+.floatleft-far {
+  float: left;
+  margin: 5px 30px 5px 0; }
+
 /*------------------------------------------- */
 /*------------------------------------------- */
 /*----------- Tablet Portrait ---------------- */
