Google Analytics deinstalliert, Watchdog-View und Comment-View haben neue UUID

--- a/themes/businessgroup_zymphonies_theme/templates/block/block--search.html.twig
+++ b/themes/businessgroup_zymphonies_theme/templates/block/block--search.html.twig
@@ -38,6 +38,7 @@
 set classes = [
 'block',
 'block-' ~ configuration.provider|clean_class,
+'search-block-form',
 ]
 %}
 <div{{ attributes.addClass(classes) }}>
