--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2593,34 +2593,34 @@ nav#block-hsk-zymphonies-main-menu {
     clear: both;
     overflow: hidden;
     visibility: hidden; }
-  nav#block-hsk-zymphonies-main-menu ul.menu {
+  nav#block-hsk-zymphonies-main-menu ul#main-menu {
     margin: 0;
     padding: 0; }
-    nav#block-hsk-zymphonies-main-menu ul.menu li a {
+    nav#block-hsk-zymphonies-main-menu ul#main-menu li a {
       background: #f3f3f3;
       border-bottom: 1px solid #ccc;
       color: #333; }
-      nav#block-hsk-zymphonies-main-menu ul.menu li a:hover, nav#block-hsk-zymphonies-main-menu ul.menu li a.highlighted {
+      nav#block-hsk-zymphonies-main-menu ul#main-menu li a:hover, nav#block-hsk-zymphonies-main-menu ul#main-menu li a.highlighted {
         background: #e5e5e5; }
-      nav#block-hsk-zymphonies-main-menu ul.menu li a .sub-arrow {
+      nav#block-hsk-zymphonies-main-menu ul#main-menu li a .sub-arrow {
         background: white;
         color: #555;
         border: 1px solid #ccc; }
-        nav#block-hsk-zymphonies-main-menu ul.menu li a .sub-arrow:hover {
+        nav#block-hsk-zymphonies-main-menu ul#main-menu li a .sub-arrow:hover {
           color: black;
           border: 1px solid #aaa;
           color: white;
           background: #ED8600; }
-    nav#block-hsk-zymphonies-main-menu ul.menu li ul {
+    nav#block-hsk-zymphonies-main-menu ul#main-menu li ul {
       display: none; }
-      nav#block-hsk-zymphonies-main-menu ul.menu li ul li a {
+      nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li a {
         padding-left: 25px;
         background: #e5e5e5;
         font-size: 14.725px;
         font-size: 0.95rem; }
-        nav#block-hsk-zymphonies-main-menu ul.menu li ul li a:hover, nav#block-hsk-zymphonies-main-menu ul.menu li ul li a.highlighted {
+        nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li a:hover, nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li a.highlighted {
           background: #d5d5d5; }
-      nav#block-hsk-zymphonies-main-menu ul.menu li ul li ul li a {
+      nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li ul li a {
         background: #d5d5d5; }
 
 #block-mobilemenubutton {
@@ -2710,6 +2710,7 @@ nav#block-hsk-footer {
   header.main-header nav {
     padding-bottom: 15px; }
     header.main-header nav .region-primary-menu {
+      display: block;
       margin-top: 8px; }
   header #block-hsk-branding {
     width: auto; }
@@ -2734,8 +2735,6 @@ nav#block-hsk-footer {
     margin-top: 21px; }
   header nav#block-hsk-main-menu {
     clear: both; }
-  header .region-primary-menu {
-    display: block; }
   header nav#block-hsk-zymphonies-main-menu {
     *zoom: 1; }
     header nav#block-hsk-zymphonies-main-menu:after {
@@ -2745,20 +2744,20 @@ nav#block-hsk-footer {
       clear: both;
       overflow: hidden;
       visibility: hidden; }
-    header nav#block-hsk-zymphonies-main-menu ul.menu li {
+    header nav#block-hsk-zymphonies-main-menu ul#main-menu li {
       display: inline;
       float: left;
       margin-right: 5px;
       text-transform: uppercase;
       font-family: "Roboto Slab", serif; }
-      header nav#block-hsk-zymphonies-main-menu ul.menu li:hover {
+      header nav#block-hsk-zymphonies-main-menu ul#main-menu li:hover {
         background: none; }
-      header nav#block-hsk-zymphonies-main-menu ul.menu li.menu-item--active-trail a {
+      header nav#block-hsk-zymphonies-main-menu ul#main-menu li.active a {
         background: #ED8600;
         color: white; }
-      header nav#block-hsk-zymphonies-main-menu ul.menu li.menu-item--active-trail ul li a {
+      header nav#block-hsk-zymphonies-main-menu ul#main-menu li.active ul li a {
         background: none; }
-      header nav#block-hsk-zymphonies-main-menu ul.menu li a {
+      header nav#block-hsk-zymphonies-main-menu ul#main-menu li a {
         background: none;
         border: none;
         color: #888;
@@ -2769,28 +2768,28 @@ nav#block-hsk-footer {
         -ms-border-radius: 5px;
         -o-border-radius: 5px;
         border-radius: 5px; }
-        header nav#block-hsk-zymphonies-main-menu ul.menu li a.is-active {
+        header nav#block-hsk-zymphonies-main-menu ul#main-menu li a.is-active {
           background: #ED8600;
           color: white; }
-        header nav#block-hsk-zymphonies-main-menu ul.menu li a:hover {
+        header nav#block-hsk-zymphonies-main-menu ul#main-menu li a:hover {
           background: #ED8600;
           color: white;
           text-decoration: none; }
-        header nav#block-hsk-zymphonies-main-menu ul.menu li a.has-submenu:hover {
+        header nav#block-hsk-zymphonies-main-menu ul#main-menu li a.has-submenu:hover {
           background: none;
           color: #888; }
-        header nav#block-hsk-zymphonies-main-menu ul.menu li a.highlighted, header nav#block-hsk-zymphonies-main-menu ul.menu li a.highlighted:hover {
+        header nav#block-hsk-zymphonies-main-menu ul#main-menu li a.highlighted, header nav#block-hsk-zymphonies-main-menu ul#main-menu li a.highlighted:hover {
           background: #ED8600;
           color: white; }
-        header nav#block-hsk-zymphonies-main-menu ul.menu li a.has-submenu.highlighted {
+        header nav#block-hsk-zymphonies-main-menu ul#main-menu li a.has-submenu.highlighted {
           -webkit-border-radius: 4px 4px 0 0;
           -moz-border-radius: 4px 4px 0 0;
           -ms-border-radius: 4px 4px 0 0;
           -o-border-radius: 4px 4px 0 0;
           border-radius: 4px 4px 0 0; }
-      header nav#block-hsk-zymphonies-main-menu ul.menu li a span.sub-arrow {
+      header nav#block-hsk-zymphonies-main-menu ul#main-menu li a span.sub-arrow {
         display: none; }
-      header nav#block-hsk-zymphonies-main-menu ul.menu li ul {
+      header nav#block-hsk-zymphonies-main-menu ul#main-menu li ul {
         background: #ED8600;
         min-width: 210px !important;
         border: none;
@@ -2801,25 +2800,25 @@ nav#block-hsk-footer {
         -ms-border-radius: 0 4px 4px 4px;
         -o-border-radius: 0 4px 4px 4px;
         border-radius: 0 4px 4px 4px; }
-        header nav#block-hsk-zymphonies-main-menu ul.menu li ul li {
+        header nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li {
           margin-right: 0;
           float: none;
           display: block; }
-          header nav#block-hsk-zymphonies-main-menu ul.menu li ul li a {
+          header nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li a {
             float: none;
             color: white;
             padding: 6px 15px;
             background: none; }
-            header nav#block-hsk-zymphonies-main-menu ul.menu li ul li a:hover, header nav#block-hsk-zymphonies-main-menu ul.menu li ul li a.highlighted {
+            header nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li a:hover, header nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li a.highlighted {
               color: black;
               background: none; }
-          header nav#block-hsk-zymphonies-main-menu ul.menu li ul li ul {
+          header nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li ul {
             background: #b76400;
             top: 27px !important;
             min-width: 210px !important; }
-            header nav#block-hsk-zymphonies-main-menu ul.menu li ul li ul li a {
+            header nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li ul li a {
               background: none; }
-              header nav#block-hsk-zymphonies-main-menu ul.menu li ul li ul li a:hover, header nav#block-hsk-zymphonies-main-menu ul.menu li ul li ul li a.highlighted {
+              header nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li ul li a:hover, header nav#block-hsk-zymphonies-main-menu ul#main-menu li ul li ul li a.highlighted {
                 background: none; }
 
   #block-mobilemenubutton {
