--- a/themes/hsk_zymphonies/templates/block--system-branding-block.html.twig
+++ b/themes/hsk_zymphonies/templates/block--system-branding-block.html.twig
@@ -26,7 +26,13 @@
     <div class="brand site-name">
       {% if site_name %}
         <div class="site-branding__name">
+          {% if front_page %}
+            <h1 class="page-title">
+          {% endif %}
           <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home">{{ site_name }}</a>
+          {% if front_page %}
+            </h1>
+          {% endif %}
         </div>
       {% endif %}
       {% if site_slogan %}
