--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -175,8 +175,10 @@
       overflow-x: auto
     .horizontal-tabs
       +tab-group-container
+      padding-top: 0
     .horizontal-tabs-panes
       +tab-content-container
+      padding-top: 0.7em
     .view-kader-2
       +legacy-pie-clearfix
       header
