--- a/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
+++ b/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
@@ -84,7 +84,7 @@ $divider-line: 1px solid #e5e5e5
   border-top: 0
   padding: 25px 22px 12px
   .details-wrapper
-    padding: 0
+    padding: 1em 0 0
 
 @mixin pagetitle-with-icon
   margin-left: 100px
