--- a/themes/hsk_zymphonies/sass/_layout.sass
+++ b/themes/hsk_zymphonies/sass/_layout.sass
@@ -67,10 +67,14 @@
 
 .footer-menu
   background: #999
+  padding-top: 0.5em
+  padding-bottom: 0.5em
   a
     color: white
 .copyright
   background: #818181
+  padding-top: 4px
+  padding-bottom: 7px
 
 
 
