--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -214,6 +214,23 @@
             width: 45px
             height: auto
 
+div#sliding-popup
+  background: transparent
+  .eu-cookie-compliance-banner
+    background: $blue
+    padding-top: 0.5em
+    p
+      font-weight: normal
+      line-height: 1.7
+    #popup-buttons
+      button
+        +button-orange
+        text-shadow: none
+        border: none
+        box-shadow: none
+        color: white
+        margin-top: 0.7em
+
 
 
 
