Korrektur HSK Seven Theme, Styling für Paragraphs Modal Buttons.

--- a/themes/seven_hsk/css/style.css
+++ b/themes/seven_hsk/css/style.css
@@ -18,6 +18,6 @@
   margin-top: 35px;
 }
 ul.paragraphs-add-dialog-list input.field-add-more-submit {
-  background-position: auto;
+  background-position: 0;
   background-size: auto;
 }
