--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -231,6 +231,14 @@ div#sliding-popup
         color: white
         margin-top: 0.7em
 
+.field--name-field-pgn-txt-pgn
+  .cbreplay
+    margin-bottom: 13px
+  .description
+    display: block
+    margin-bottom: 25px
+    +x-rem(font-size, 0.75)
+    color: #777
 
 
 
