--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -8,6 +8,9 @@
   .comment-submitted
     border: none
     padding: 0
+  ul.links.inline
+    .comment-forbidden
+      display: none
   .field--name-field-tags
     clear: left
     .field__label
