--- a/themes/hsk_zymphonies/css/ckeditor-custom.css
+++ b/themes/hsk_zymphonies/css/ckeditor-custom.css
@@ -1,4 +1,10 @@
-table .center-table {
-  margin: 0 auto; }
+table.center-table {
+  margin: 1em auto; }
+
+/************************************ */
+/** Styles for the CKEditor Interface */
+/************************************ */
+.cke_reset .cke_editable table.center-table {
+  margin: 1em auto; }
 
 /*# sourceMappingURL=ckeditor-custom.css.map */
