--- a/themes/hsk_zymphonies/sass/ckeditor-custom.sass
+++ b/themes/hsk_zymphonies/sass/ckeditor-custom.sass
@@ -1,3 +1,13 @@
 table
-  .center-table
-    margin: 0 auto
+  &.center-table
+    margin: 1em auto
+
+
+/************************************ */
+/** Styles for the CKEditor Interface */
+/************************************ */
+.cke_reset
+  .cke_editable
+    table
+      &.center-table
+        margin: 1em auto
