--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -72,6 +72,7 @@
     h2.title
       margin-bottom: 15px
     .views-row
+      +legacy-pie-clearfix
       margin-bottom: 15px
       h3
         margin-bottom: 2px
@@ -80,6 +81,17 @@
           color: #999
           &:before
             content: "- "
+      .views-field-title
+        margin-bottom: 3px
+      .views-field-field-image
+        float: left
+        margin: 5px 15px 0 0
+      a.views-more-link
+        color: #999
+        padding-left: 5px
+        +x-rem(font-size, 0.85)
+        &:hover
+          color: $link-color
 
     .views-field-created
       +small-grey-links
@@ -200,6 +212,12 @@
 
     #block-views-block-news-block-1
       +make-md-column(6)
+      .views-row
+        .views-field-field-image
+          float: left
+          margin: 5px 15px 0 0
+
+
 
 
 
