--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -215,8 +215,7 @@
       .views-row
         .views-field-field-image
           float: left
-          margin: 5px 15px 0 0
-
+          margin-top: 2px
 
 
 
