--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -26,15 +26,16 @@
   .view-header-par-slideshow
     .views-row
       position: relative
-      .views-field-field-sli-heading
+      .views-field-field-sli-text
         background: #888
-        color: white
-        +x-rem(font-size, 1.1)
-        padding: 7px
-        p
-          margin-bottom: 0
-        a
+        .slide-headline
           color: white
+          +x-rem(font-size, 1.1)
+          padding: 7px
+          p
+            margin-bottom: 0
+          a
+            color: white
       .views-field-field-sli-image
         img
           width: 100%
@@ -256,20 +257,26 @@
       .view-header-par-slideshow
         .views-row
           max-height: 400px
-          .views-field-field-sli-heading
+          .views-field-field-sli-text
             position: absolute
             bottom: 20px
             width: 100%
             background: none
-            a
-              background: rgba(125,125,125,0.6)
-              color: white
+            text-align: left
+            .inner-container
+              +make-md-column(6)
               padding: 15px 20px
-              +x-rem(font-size, 1.3)
-              float: left
-              max-width: 50%
-              text-align: left
-              line-height: 1.35
+              background: rgba(70,70,70,0.7)
+              color: white
+              h3.slide-headline
+                padding: 0
+                margin-bottom: 0.1em
+                font-family: $open-sans
+              a
+                color: white
+                +x-rem(font-size, 1.3)
+                text-align: left
+                line-height: 1.35
   .path-news
     .view-news
       .views-row
@@ -307,6 +314,11 @@
 +breakpoint($breakpoint-desktop)
   .path-frontpage
     #block-views-block-header-slideshow-block-1
+      max-height: 400px
+      max-width: 1600px
+      margin: auto
+
+    #block-views-block-header-par-slideshow-block-1
       max-height: 400px
       max-width: 1600px
       margin: auto
