--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1700,23 +1700,25 @@ button.btn, a.btn {
       color: white; }
   .path-frontpage .view-header-slideshow .views-row .views-field-field-fc-sl-image img {
     width: 100%; }
-.path-frontpage #block-views-block-header-par-slideshow-block-1.block {
+.path-frontpage #block-views-block-header-par-slideshow-block-1 {
   margin-bottom: 0; }
-.path-frontpage .view-header-par-slideshow .views-row {
-  position: relative; }
-  .path-frontpage .view-header-par-slideshow .views-row .views-field-field-sli-text {
-    background: #888; }
-    .path-frontpage .view-header-par-slideshow .views-row .views-field-field-sli-text .slide-headline {
-      color: white;
-      font-size: 17.05px;
-      font-size: 1.1rem;
-      padding: 7px; }
-      .path-frontpage .view-header-par-slideshow .views-row .views-field-field-sli-text .slide-headline p {
-        margin-bottom: 0; }
-      .path-frontpage .view-header-par-slideshow .views-row .views-field-field-sli-text .slide-headline a {
-        color: white; }
-  .path-frontpage .view-header-par-slideshow .views-row .views-field-field-sli-image img {
-    width: 100%; }
+  .path-frontpage #block-views-block-header-par-slideshow-block-1 .view-header-par-slideshow .views-row {
+    position: relative; }
+    .path-frontpage #block-views-block-header-par-slideshow-block-1 .view-header-par-slideshow .views-row .views-field-field-sli-text {
+      background: #888;
+      font-size: 14.725px;
+      font-size: 0.95rem; }
+      .path-frontpage #block-views-block-header-par-slideshow-block-1 .view-header-par-slideshow .views-row .views-field-field-sli-text .slide-headline {
+        color: white;
+        font-size: 20.925px;
+        font-size: 1.35rem;
+        padding: 7px; }
+        .path-frontpage #block-views-block-header-par-slideshow-block-1 .view-header-par-slideshow .views-row .views-field-field-sli-text .slide-headline p {
+          margin-bottom: 0; }
+        .path-frontpage #block-views-block-header-par-slideshow-block-1 .view-header-par-slideshow .views-row .views-field-field-sli-text .slide-headline a {
+          color: white; }
+    .path-frontpage #block-views-block-header-par-slideshow-block-1 .view-header-par-slideshow .views-row .views-field-field-sli-image img {
+      width: 100%; }
 
 .sidebar .view-events-list .view-header {
   display: none; }
@@ -1924,17 +1926,17 @@ button.btn, a.btn {
           min-height: 1px;
           padding-left: 15px;
           padding-right: 15px;
-          padding: 15px 20px;
-          background: rgba(70, 70, 70, 0.7);
+          padding: 10px 20px 15px;
+          background: rgba(70, 70, 70, 0.6);
           color: white; } }
         @media only screen and (min-width: 992px) and (min-width: 992px) {
           .path-frontpage #block-views-block-header-par-slideshow-block-1 .view-header-par-slideshow .views-row .views-field-field-sli-text .inner-container {
             float: left;
-            width: 50%; } }
+            width: 41.6666666667%; } }
 @media only screen and (min-width: 992px) {
           .path-frontpage #block-views-block-header-par-slideshow-block-1 .view-header-par-slideshow .views-row .views-field-field-sli-text .inner-container h3.slide-headline {
             padding: 0;
-            margin-bottom: 0.1em;
+            margin-bottom: 0.25em;
             font-family: "Open Sans", sans-serif; }
           .path-frontpage #block-views-block-header-par-slideshow-block-1 .view-header-par-slideshow .views-row .views-field-field-sli-text .inner-container a {
             color: white;
@@ -1942,6 +1944,8 @@ button.btn, a.btn {
             font-size: 1.3rem;
             text-align: left;
             line-height: 1.35; }
+          .path-frontpage #block-views-block-header-par-slideshow-block-1 .view-header-par-slideshow .views-row .views-field-field-sli-text .inner-container p {
+            margin-bottom: 0; }
 
   .path-news .view-news .views-row {
     *zoom: 1; }
