--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -8,6 +8,8 @@
     margin-top: 0
     .region-content
       margin-bottom: 15px
+  #block-hsk-zymphonies-content
+    margin: 0
   #block-views-block-events-list-block-1
     h3
       color: $grey-text
@@ -212,6 +214,7 @@
     .content_layout
       .region-content
         +make-row()
+        margin-top: 30px
     #block-views-block-events-list-block-1
       +make-md-column(6)
 
