--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -27,14 +27,21 @@
       .views-row
         position: relative
         .views-field-field-sli-text
-          background: #888
+          background: #666
           +x-rem(font-size, 0.95)
+          color: white
+          line-height: 1.35
+          .inner-container
+            padding: 0 15px 10px
+            p
+              margin: 0 0 5px
+              padding: 0
           .slide-headline
             color: white
             +x-rem(font-size, 1.35)
-            padding: 7px
-            p
-              margin-bottom: 0
+            margin-top: 0.4em
+            margin-bottom: 0.1em
+            font-family: $open-sans
             a
               color: white
         .views-field-field-sli-image
@@ -264,6 +271,7 @@
             width: 100%
             background: none
             text-align: left
+            line-height: 1.5
             .inner-container
               +make-md-column(5)
               padding: 10px 20px 15px
@@ -272,14 +280,11 @@
               h3.slide-headline
                 padding: 0
                 margin-bottom: 0.25em
-                font-family: $open-sans
               a
                 color: white
                 +x-rem(font-size, 1.3)
                 text-align: left
                 line-height: 1.35
-              p
-                margin-bottom: 0
   .path-news
     .view-news
       .views-row
